fix: make filter-products take all space on mobile

--- a/components/filter-products/style.scss
+++ b/components/filter-products/style.scss
@@ -8,10 +8,11 @@
   }
 
   form {
-    @include m-p(0 2em, 3em);
     background-color: white;
     padding-top: 1em;
-    border-radius: 15px;
+    padding: 3em;
+    width: 100%;
+    height: 100vh;
 
     h2 {
       font-size: 1.2rem;
@@ -53,6 +54,12 @@
     .submit {
       background-color: var(--clr-primary);
       margin-left: 1em;
+    }
+
+    @include on-pc {
+      width: auto;
+      height: auto;
+      border-radius: 15px;
     }
   }
 }
